# pricing

./: .clang-format  .cmake-format  .gitignore  CMakeLists.txt  Makefile  README.md
deploy/: Dockerfile  config.json  feeder.Dockerfile
docs/: tfbsm-arch.drawio  tfbsm-component-level-arch.drawio
feeder/: .gitignore  .golangci.yaml  Makefile  README.md  go.mod  go.sum
feeder/cmd/feeder/: root.go
feeder/cmd/mockclient/: root.go
feeder/cmd/mockupstream/: root.go
feeder/config/: config.yaml  prometheus.yml
feeder/pkg/app/: const.go  metrics.go  root.go  router.go
feeder/pkg/app/handlers/: ws.go
feeder/pkg/config/: config.go
feeder/pkg/core/: service.go  services.go
feeder/pkg/core/domain/: instrument.go  observation.go  observation_dto.go
feeder/pkg/core/domain/api/: root.go  ws.go
feeder/pkg/core/feedersvc/: metrics.go  root.go  uc_observations_stream.go  uc_process_observation.go
feeder/pkg/infra/sink/: root.go
feeder/pkg/infra/upstream/: root.go  zmq.go
feeder/pkg/log/: logger.go  zap.go
feeder/pkg/util/: broker.go  root.go
include/libtfbsm/: configuration_repository.hpp  crc32.h  feeder_protocol.hpp  model.hpp  models.hpp  observers.hpp  option.hpp  option_dto.hpp  parameter_estimator.hpp  price_sink.hpp  price_source.hpp  pricing_engine.hpp  protocol.hpp  stable_distribution.hpp  tick_collector.hpp  zmq_price_sink.hpp  zmq_price_source.hpp
include/libtfbsm/core/: models.hpp  observers.hpp  parameter_estimator.hpp  pricing_engine.hpp
include/libtfbsm/interactions/: price_sink.hpp  price_source.hpp  zmq_price_sink.hpp  zmq_price_source.hpp
include/libtfbsm/interactions/protocol/: crc32.h  protocol.hpp
scripts/: kline_feeder.py  tick_feeder.py
src/app/: test_app.cpp  test_feeder.cpp  test_pricing_engine.cpp
src/libtfbsm/: configuration_repository.cpp  model.cpp  models.cpp  parameter_estimator.cpp  pricing_engine.cpp  pricing_engine.hpp  stable_distribution.cpp  zmq_price_sink.cpp  zmq_price_source.cpp
src/libtfbsm/core/: models.cpp  parameter_estimator.cpp  pricing_engine.cpp  stable_distribution.cpp
src/libtfbsm/interactions/: zmq_price_sink.cpp  zmq_price_source.cpp
tests/: test_something.cpp
